test/elaboration/bad/coreml_exists.mle
let (main : int) = ['a 'b] (fun (x : 'b) -> (x[] : 'a)) 42